--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta data for search engine-->
+    <meta name="keywords" content="quiz, wonders of the world, ancient, modern, knowledge, test yourself">
+    <meta name="author" content="Regan Boreland">
+    <meta name="description" content="Wonders of the world is a quiz in which all users can test their knowledge on the modern and ancient wonders of the world">
     <title>Wonders Of The World</title>
+    <!--link to css-->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/wondersquizicon.png">
 </head>
 <body>
     <header>
+        <div id="header">
+            <h1>Wonders Of The World</h1>
+            <h4 id="subtitleA">Ancient Wonders Of The World</h4>
+            <h4 id="subtitleB">Modern Wonders Of The World</h4>
+        </div>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
-    
+    <!--link to javascript file-->
+    <script href="assets/javascript/script.js"></script>
+    <!--font awesome link-->
+    <script src="https://kit.fontawesome.com/c9b1ef8314.js" crossorigin="anonymous"></script>
 </body>
 </html>
