--- a/index.html
+++ b/index.html
@@ -19,10 +19,27 @@
             <h4 id="subtitleA">Ancient Wonders Of The World</h4>
             <h4 id="subtitleB">Modern Wonders Of The World</h4>
         </div>
-
     </header>
     <main>
+        <div id="how_to_container">
+            <h3>How to play</h3>
+                <p>This is how to works, once you read this click on the lets play button. You'll be taken to a page with two options, either a quiz about the ancient wonders of the world or, a quiz about the modern wonders of the world. Of course it's your choice. For each correct score you gain 1 point, and the same for incorrect scores. The questions won't be easy. Good luck!</p>
+        </div>
+        <div id="lets_play_container">
 
+        </div>
+        <div id="quizes_container">
+
+        </div>
+        <div id="questions_container">
+
+        </div>
+        <div id="answers_container">
+
+        </div>
+        <div id="score_container">
+
+        </div>
     </main>
     <footer>
 
