add username container and input elements to username container

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <div id="lets_play_container">
             <button id="lets_play_bttn">Lets play</button>
         </div>
+        <div id="username_container">
+            <input type="text" id="username" placeholder="Enter your name">
+            <input type="submit" id="submit">
+        </div>
         <div id="quizes_container">
 
         </div>
