--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
 
         </div>
         <div id="qa_container">
+            <div id="question_content">
+                <h3>Q1.</h3>
+
+            </div>
+            <div id="answers_container">
+                <h3>
+                    Answers
+                </h3>
+
+            </div>
 
         </div>
         <div id="score_container">
