add divs to score container for correct and incorrect score

--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
                 </h3>
 
             </div>
-
         </div>
         <div id="score_container">
+            <div id="correct_score">
 
+            </div>
+            <div id="incorrect_score">
+
+            </div>
         </div>
     </main>
     <footer>
