add content to score container

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
         <div id="score_container">
             <div id="correct_score">
-
+                <h4>Correct score:</h4>
             </div>
             <div id="incorrect_score">
-
+                <h4>Incorrect score:</h4>
             </div>
         </div>
     </main>
