--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
         <div id="score_container">
             <div id="correct_score">
-                <h4>Correct score:</h4>
+                <h4><i class="fa-solid fa-check"></i> Correct score:</h4>
             </div>
             <div id="incorrect_score">
-                <h4>Incorrect score:</h4>
+                <h4><i class="fa-solid fa-xmark"></i> Incorrect score:</h4>
             </div>
         </div>
     </main>
