--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <input type="submit" id="submit">
         </div>
         <div id="quizes_container">
+            <button id="ancient_quiz_bttn">Ancient Wonders Quiz</button>
+            <button id="modern_quiz_bttn">Modern Wonders Quiz</button>
 
         </div>
         <div id="qa_container">
