add hover style to buttons

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id="username_container">
             <input type="text" id="username" placeholder="Enter your name">
-            <input type="submit" id="submit">
+            <button type="submit" id="submit">Submit</button>
         </div>
         <div id="quizes_container">
             <button id="ancient_quiz_bttn">Ancient Wonders Quiz</button>
