add const variables to js script

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </div>
         <div id="username_container">
             <input type="text" id="username" placeholder="Enter your name">
-            <button type="submit" id="submit">Submit</button>
+            <button type="submit" id="submit" onclick="usernameSubmit()">Submit</button>
+            
         </div>
         <div id="quizes_container">
             <button id="ancient_quiz_bttn">Ancient Wonders Quiz</button>
@@ -61,7 +62,7 @@
 
     </footer>
     <!--link to javascript file-->
-    <script href="assets/javascript/script.js"></script>
+    <script src="assets/javascript/script.js"></script>
     <!--font awesome link-->
     <script src="https://kit.fontawesome.com/c9b1ef8314.js" crossorigin="anonymous"></script>
 </body>
