set initial containers display to none

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id="username_container">
             <input type="text" id="username" placeholder="Enter your name">
-            <button type="submit" id="submit" onclick="usernameSubmit()">Submit</button>
+            <button type="submit" id="submit">Submit</button>
             
         </div>
         <div id="quizes_container">
