--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>This is how to works, once you read this click on the lets play button. You'll be taken to a page with two options, either a quiz about the ancient wonders of the world or, a quiz about the modern wonders of the world. Of course it's your choice. For each correct score you gain 1 point, and the same for incorrect scores. The questions won't be easy. Good luck!</p>
         </div>
         <div id="lets_play_container">
-            <button id="lets_play_bttn">Lets play</button>
+            <button id="lets_play_bttn" onclick="displayUsername()">Lets play</button>
         </div>
         <div id="username_container">
             <input type="text" id="username" placeholder="Enter your name">
