add deployment steps to readme

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             </div>
         </div>
         <div id="score_container">
-            <div id="correct_score">
-                <h5><i class="fa-solid fa-check"></i> Correct score:</h5>
+            <div>
+                <h5><i class="fa-solid fa-check"></i> Correct Score:<p>0</p></h5>
             </div>
-            <div id="incorrect_score">
-                <h5><i class="fa-solid fa-xmark"></i> Incorrect score:</h5>
+            <div>
+                <h5><i class="fa-solid fa-xmark"></i> Incorrect score:<p>0</p></h5>
             </div>
         </div>
     </main>
