fix bug on resetWebpage function to reveal necessary elements instead of all elements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="header">
-            <h1>Wonders Of The World</h1>
+            <h1 id="title" onclick="resetWebpage()">Wonders Of The World</h1>
         </div>
     </header>
     <main>
@@ -35,7 +35,7 @@
         </div>
         <!--username response message-->
         <div id="greet_container">
-            <h4 id="greet">are you ready to test your knowledge?</h4>
+            <h4 id="greet"></h4>
         </div>
         <!--quiz options container-->
         <div id="quizes_container">
