add link to questions.js in index.html

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
     <footer>
 
     </footer>
-    <!--link to javascript file-->
+    <!--link to script.js file-->
     <script src="assets/javascript/script.js"></script>
+    <!--link to questions.js file-->
+    <script src="assets/javascript/questions.js"></script>
     <!--font awesome link-->
     <script src="https://kit.fontawesome.com/c9b1ef8314.js" crossorigin="anonymous"></script>
 </body>
