add attribute to call modern wonders function on click

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!--quiz options container-->
         <div id="quizes_container">
             <button id="ancient_quiz_bttn" onclick="ancientWonders()">Ancient Wonders Quiz</button>
-            <button id="modern_quiz_bttn">Modern Wonders Quiz</button>
+            <button id="modern_quiz_bttn" onclick="modernWonders()">Modern Wonders Quiz</button>
         </div>
         <!--container that presents questions and potential answers-->
         <div id="qa_container">
