--- a/index.html
+++ b/index.html
@@ -39,18 +39,16 @@
         </div>
         <!--quiz options container-->
         <div id="quizes_container">
-            <button id="ancient_quiz_bttn" onclick="ancientWonders()">Ancient Wonders Quiz</button>
-            <button id="modern_quiz_bttn" onclick="modernWonders()">Modern Wonders Quiz</button>
+            <button id="lets_play_bttn">Test my knowledge</button>
         </div>
         <!--container that presents questions and potential answers-->
         <div id="qa_container">
-            <div id="question_content">
-                <h3>Q1.</h3>
+            <div>
+                <h3 id="questions_Content"></h3>
 
             </div>
             <div id="answers_container">
                 <h3>
-                    Answers
                 </h3>
             </div>
         </div>
