add buttons to represent possible answers to qa container

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
         <div id="qa_container">
             <div>
                 <h3 id="questions_Content"></h3>
-
             </div>
             <div id="answers_container">
-                <h3>
-                </h3>
+                <button class="option_btn"></button>
+                <button class="option_btn"></button>
+                <button class="option_btn"></button>
+                <button class="option_btn"></button>
             </div>
         </div>
         <!--container that presents user with correct and incorrect scores-->
