style option buttons for all devices

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div id="greet_container">
             <h4 id="greet"></h4>
         </div>
-        <!--quiz options container-->
+        <!--container with button to start the quiz-->
         <div id="quizes_container">
             <button id="lets_play_bttn">Test my knowledge</button>
         </div>
         <!--container that presents questions and potential answers-->
         <div id="qa_container">
             <div>
-                <h3 id="questions_Content"></h3>
+                <h3 id="questions_Content">Questions</h3>
             </div>
             <div id="answers_container">
                 <button class="option_btn"></button>
