add bug and solution to fixed bugs in testing file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <!--container with button to start the quiz-->
         <div id="quizes_container">
-            <button id="lets_play_bttn">Test my knowledge</button>
+            <button id="startBttn" onclick="startQuiz()">Test my knowledge</button>
         </div>
         <!--container that presents questions and potential answers-->
         <div id="qa_container">
@@ -47,10 +47,10 @@
                 <h3 id="questions_Content">Questions</h3>
             </div>
             <div id="answers_container">
-                <button class="option_btn"></button>
-                <button class="option_btn"></button>
-                <button class="option_btn"></button>
-                <button class="option_btn"></button>
+                <button class="option_bttn"></button>
+                <button class="option_bttn"></button>
+                <button class="option_bttn"></button>
+                <button class="option_bttn"></button>
             </div>
         </div>
         <!--container that presents user with correct and incorrect scores-->
