--- a/index.html
+++ b/index.html
@@ -43,23 +43,27 @@
         </div>
         <!--container that presents questions and potential answers-->
         <div id="qa_container">
-            <div>
+            <div id="questions_container">
                 <h3 id="questions_Content"></h3>
             </div>
             <div id="answers_container">
-                <button class="option_bttn"></button>
-                <button class="option_bttn"></button>
-                <button class="option_bttn"></button>
-                <button class="option_bttn"></button>
+                <button class="option_bttn" data-number="1">answer</button>
+                <button class="option_bttn" data-number="2">answer</button>
+                <button class="option_bttn" data-number="3">answer</button>
+                <button class="option_bttn" data-number="4">answer</button>
             </div>
+            <button id="next_bttn"></button>
         </div>
         <!--container that presents user with correct and incorrect scores-->
         <div id="score_container">
             <div>
-                <h5><i class="fa-solid fa-check"></i> Correct Score:<p id="cScore"></p></h5>
+                <h5><i class="fa-solid fa-check"></i> Correct Score:<span id="cScore"></span></h5>
             </div>
             <div>
-                <h5><i class="fa-solid fa-xmark"></i> Incorrect score:<p id="iScore"></p></h5>
+                <h5><i class="fa-solid fa-xmark"></i> Incorrect score:<span id="iScore"></span></h5>
+            </div>
+            <div>
+                <h5 id="question_counter_text"></h5>
             </div>
         </div>
     </main>
@@ -68,8 +72,6 @@
     </footer>
     <!--link to script.js file-->
     <script src="assets/javascript/script.js"></script>
-    <!--link to questions.js file-->
-    <script src="assets/javascript/questions.js"></script>
     <!--font awesome link-->
     <script src="https://kit.fontawesome.com/c9b1ef8314.js" crossorigin="anonymous"></script>
 </body>
