add display so user can see current question / max question

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--container that presents questions and potential answers-->
         <div id="qa_container">
             <div id="questions_container">
-                <h3 id="questions_Content"></h3>
+                <h3 id="questions_Content">questions</h3>
             </div>
             <div id="answers_container">
                 <button class="option_bttn" data-number="1">answer</button>
