--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <!--username response message-->
         <div id="greet_container">
-            <h4 id="greet"></h4>
+            <h4 id="greet">greet message</h4>
         </div>
         <!--container with button to start the quiz-->
         <div id="quizes_container">
@@ -62,7 +62,7 @@
                 <h5><i class="fa-solid fa-xmark"></i> Incorrect score:<span id="iScore"></span></h5>
             </div>
             <div>
-                <h5 id="question_counter_text"></h5>
+                <h5 id="question_counter_text">current question</h5>
             </div>
         </div>
     </main>
@@ -73,5 +73,7 @@
     <script src="assets/javascript/script.js"></script>
     <!--font awesome link-->
     <script src="https://kit.fontawesome.com/c9b1ef8314.js" crossorigin="anonymous"></script>
+    <!--sweet alert link-->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
