change how to play content message

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--container for instructions and pre game message-->
         <div id="how_to_container">
             <h3>How to play</h3>
-                <p>This is how to works, once you read this click on the lets play button. You'll be taken to a page with two options, either a quiz about the ancient wonders of the world or, a quiz about the modern wonders of the world. Of course it's your choice. For each correct score you gain 1 point, and the same for incorrect scores. The questions won't be easy. Good luck!</p>
+                <p>This is how to works, once you read this click on the lets play button. You'll then be taken to a page where you can enter your name or if you want an alter ego then so be it. For each correct score you gain 1 point, and the same for incorrect scores. The questions won't be easy. Good luck!</p>
         </div>
         <!--container for button to provide users with game option-->
         <div id="lets_play_container">
