--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
         <!--container for both username input and submit username button-->
         <div id="username_container">
+            <label for="username" id="username">Enter your username</label>
             <input type="text" id="username" placeholder="Enter your name">
             <button type="submit" id="submit" onclick="submitUsername()" aria-label="submit username">Submit</button>
         </div>
