--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/wondersquizicon.png">
 </head>
-<body>
+<body onload="loadWebpage()">
     <header>
         <div id="header">
-            <h1 id="title" onclick="resetWebpage()">Wonders Of The World</h1>
+            <h1 id="title" onclick="loadWebpage()">Wonders Of The World</h1>
         </div>
     </header>
     <main>
@@ -26,12 +26,13 @@
         </div>
         <!--container for button to provide users with game option-->
         <div id="lets_play_container">
-            <button id="lets_play_bttn" onclick="displayUsername()" aria-label="lets play button">Lets play</button>
+            <button id="lets_play_bttn" aria-label="lets play button">Lets play</button>
         </div>
         <!--container for both username input and submit username button-->
         <div id="username_container">
+            <h4>Please ensure your username contains more than 3 and less than 9 characters</h4>
             <input type="text" id="username" placeholder="Enter your name" aria-label="username input">
-            <button type="submit" id="submit" onclick="submitUsername()">Submit</button>
+            <button type="submit" id="submit">Submit</button>
         </div>
         <!--username response message-->
         <div id="greet_container">
@@ -39,7 +40,7 @@
         </div>
         <!--container with button to start the quiz-->
         <div id="quizes_container">
-            <button id="startBttn" onclick="startQuiz()" aria-label="start button">Test my knowledge</button>
+            <button id="startBttn" aria-label="start button">Test my knowledge</button>
         </div>
         <!--container that presents questions and potential answers-->
         <div id="qa_container">
@@ -55,6 +56,7 @@
         </div>
         <!--container that presents user with correct and incorrect scores-->
         <div id="score_container">
+            <h3>final result</h3>
             <div>
                 <h5><i class="fa-solid fa-check"></i> Correct Score:<span id="cScore"></span></h5>
             </div>
@@ -70,7 +72,8 @@
 
     </footer>
     <!--link to script.js file-->
-    <script src="assets/javascript/script.js"></script>
+    <script src="assets/javascript/scripts.js"></script>
+    
     <!--font awesome link-->
     <script src="https://kit.fontawesome.com/c9b1ef8314.js" crossorigin="anonymous"></script>
     <!--sweet alert link-->
