--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
         </div>
         <!--container that presents user with correct and incorrect scores-->
         <div id="score_container">
-            <h3>final result</h3>
             <div>
                 <h5><i class="fa-solid fa-check"></i> Correct Score:<span id="cScore"></span></h5>
             </div>
@@ -66,6 +65,9 @@
             <div>
                 <h5 id="question_counter_text">current question</h5>
             </div>
+        </div>
+        <div>
+            <h3 id="finalResult"></h3>
         </div>
     </main>
     <footer>
